--- a/src/partials/details.jade
+++ b/src/partials/details.jade
@@ -12,7 +12,7 @@ div.row
    li Overnachtingen op Campings en fee natuurparken
    li Transfer vliegveld Perth
  div.large-6.columns
-  img.full(src="/static/img/safari-06.png", title="", border="0")
+  img.full(src="/static/img/safari-06.jpg", title="", border="0")
 div.row
  div.large-6.columns
   h3 Reis informatie
@@ -28,7 +28,7 @@ div.row
    Het is belangrijk een goede reisverzekering af te sluiten dat kite- kite geralteerde activiteiten dekt.
    Bijv. Allianz Global Assistance.
  div.large-6.columns
-  img.full(src="/static/img/safari-05.png", title="", border="0")
+  img.full(src="/static/img/safari-05.jpg", title="", border="0")
 div.row
  div.large-12.columns
   h3 Annulering
