--- a/src/partials/home.jade
+++ b/src/partials/home.jade
@@ -1,8 +1,8 @@
 div.row
  div.large-12.columns
-  img.full(src="/static/img/robertskitesafari.png", title="graag nemen we je mee onvergetelijke kite ervaring", border="0")
+  img.full(src="/static/img/robertskitesafari.jpg", title="graag nemen we je mee onvergetelijke kite ervaring", border="0")
   p.
-   Robert's Kitesafari gaat van start in Perth, West-Australië, "Down Under"iii.
+   Robert's Kitesafari gaat van start in Perth, West-Australië, "Down Under".
    Na een dag ontspanning in de prachtige stad Perth waar we op een camping overnachten
    vertrekken wij "up North".
   p.
@@ -10,9 +10,9 @@ div.row
    over de 5000 km lange kustlijn, waarvan Robert's kitesafari 20 van deze mooie spots aandoet.
 div.row
  div.large-6.columns
-  img.full(src="/static/img/kiter-waves-01.png", title="", border="0")
+  img.full(src="/static/img/kiter-waves-01.jpg", title="", border="0")
  div.large-6.columns
-  img.full(src="/static/img/kiter-waves-02.png", title="", border="0")
+  img.full(src="/static/img/kiter-waves-02.jpg", title="", border="0")
  div.large-12.columns
   p.
     Met ons team en locale kennis nemen wij je twee weken mee naar de top 20 locaties met 
@@ -23,13 +23,13 @@ div.row
     De zeewind die altijd uit het Zuid-Westen waait is een sterk thermische zeewind genaamd 
     "Fremantle doctor" die 6 maanden lang elke dag om klokslag 12:00h begint te waaien. 
     Deze wind biedt de perfecte omstandigheden om te “wave rijden” en is tussen de 15 en 40 knopen. 
-    Wij adviseren om minimaal drie vliegers mee te nemen: 6, 7, 8 en 9meter zijn de meest gevaren 
-    maten voor mannen rond de 80kg.
+    Wij adviseren om minimaal drie vliegers mee te nemen: 6, 7, 8 en 9 meter zijn de meest gevaren 
+    maten voor mannen rond de 80 kg.
 div.row
  div.large-6.columns
-  img.full(src="/static/img/supper-waves-01.png", title="", border="0")
+  img.full(src="/static/img/supper-waves-01.jpg", title="", border="0")
  div.large-6.columns
-  img.full(src="/static/img/supper-waves-02.png", title="", border="0")
+  img.full(src="/static/img/supper-waves-02.jpg", title="", border="0")
  div.large-12.columns
    p.
      In deze ongelooflijke mooie omgeving waar de natuur nog ongerept is, is het zeewater kraakhelder
@@ -40,9 +40,9 @@ div.row
      eventueel gestrande kiters en SUP-ers op te halen. Het doel is om in de ochtend te gaan rijden na 
      het ontbijt en een SUP/surfsessie om naar de volgende kite stek te rijden.
  div.large-6.columns
-  img.full(src="/static/img/safari-01.png", title="", border="0")
+  img.full(src="/static/img/safari-01.jpg", title="", border="0")
  div.large-6.columns
-  img.full(src="/static/img/safari-02.png", title="", border="0")
+  img.full(src="/static/img/safari-02.jpg", title="", border="0")
 div.row
  div.large-12.columns
    p.
@@ -55,9 +55,9 @@ div.row
      Met een drankje in de hand kun je lekker nagenieten van de dag bij een knapperend kampvuur
      hier en daar opgeluisterd door gitaarmuziek.
  div.large-6.columns
-  img.full(src="/static/img/safari-03.png", title="", border="0")
+  img.full(src="/static/img/safari-03.jpg", title="", border="0")
  div.large-6.columns
-  img.full(src="/static/img/safari-04.png", title="", border="0")
+  img.full(src="/static/img/safari-04.jpg", title="", border="0")
  div.large-12.columns
    p.
      De Toyota's zijn voorzien van goede matrassen, bedlinnen, kussens, daktenten, of gewone tenten.
@@ -69,12 +69,14 @@ div.row
    p.
      West-Australië is ook ideaal om te duiken, snorkelen, vissen, wandelen en nog veel meer.
  div.large-6.columns
-  img.full(src="/static/img/safari-05.png", title="", border="0")
+  img.full(src="/static/img/safari-05.jpg", title="", border="0")
  div.large-6.columns
-  img.full(src="/static/img/safari-06.png", title="", border="0")
+  img.full(src="/static/img/safari-06.jpg", title="", border="0")
+div.row
+ div.large-12.columns
+  h2#over-ons Over ons
 div.row
  div.large-6.columns
-  h2#over-ons Over ons
   h3 Robert Kamerbeek
   p.
    Ik ben geboren in Amsterdam en woon nu in Zandvoort. Zo'n 17 jaar geleden ben ik begonnen met
@@ -86,7 +88,7 @@ div.row
    meeste trips zijn wel naar Australië geweest, daar kom ik al zo'n 18 jaar en ondertussen weet ik alle
    top spots te vinden in het Westen.
  div.large-6.columns
-  img.full(src="/static/img/robert-mariam.png", title="", border="0")
+  img.full(src="/static/img/robert-mariam.jpg", title="", border="0")
  div.large-12.columns
   p.
    Naast de fantastische omstandigheden voor het kitesurfen en andere watersporten alsook het
@@ -113,5 +115,4 @@ div.row
    horeca ervaring bij Far Out, het verhuren van zomer appartementen en mijn vrolijke
    persoonlijkheid ga ík er alles aan doen om de perfecte gastvrouw voor jullie te zijn tijdens dit
    avontuur.
-   Daarnaast zal ik mij met name bezig houden met de boekingen, planning van de trips en
-   organisatie.
+   Daarnaast zal ik mij met name bezig houden met de boekingen, planning van de trips en organisatie.
