--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -4,6 +4,7 @@ $topbar-sticky-class: ".sticky" default;
 
 html, body, .off-canvas-wrap, .inner-wrap, .main-section
 {
+  background-color: #eee;
 }
 
 .wrapper{min-height:100%}
@@ -27,6 +28,10 @@ html, body, .off-canvas-wrap, .inner-wrap, .main-section
 	background: $main-color1;
 }
 
+.row {
+    background-color: #fff;
+}
+
 img.full {
   width: 100%;
   height: 100%;
@@ -45,7 +50,7 @@ img.full {
   }
   a {
     text-decoration: none;
-    color: #F2F5F6;
+    color: #F3E7E6;
   }
   ul li {
     display: block;
@@ -54,8 +59,13 @@ img.full {
   color: #fff;
   border-bottom: 1px solid lighten($main-color1, 10%);
   }
+  .row {
+    background-color: $main-color1;
+  }
 }
 
+.google-map {width:100%; height:100%;}
+#map-canvas { height:30rem; img{max-width: inherit; }}
 
 .iGroupware-footer {
   padding: 1em 0 1em 0;
@@ -65,14 +75,8 @@ img.full {
   a {
     color: #888;
   }
+  .row {
+    background-color: #333;
+  }
 }
 
-#over-text {
-  z-index: -9999;
-  margin-top: -13em;
-  position: relative;
-}
-.in-photo {
-  padding-left: 1em;
-  padding-right: 1em;
-}
