--- a/src/layout/index.html
+++ b/src/layout/index.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>Roberts kitesafari</title>
-  <meta name="description" content="">
+  <meta name="description" content="Robert's Kitesafari gaat van start in Perth, West-Australië, "Down Under". Na een dag ontspanning in de prachtige stad Perth waar we op een camping overnachten vertrekken wij "up North".">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="fragment" content="!">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
+  <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
 
   <!-- Place favicon.ico and apple-touch-icon(s) -->
 
@@ -14,13 +16,12 @@
   <!-- @if NODE_ENV == 'DEVELOPMENT' -->
 
   <!-- CSS  & JS development <!-- @echo pkgname --> -->
-  <script src="/vendor/js/modernizr.js"></script>
-  <script src="/vendor/js/angular.js"></script>
-  <script src="/vendor/js/angular-route.js"></script>
-  <script src="/vendor/js/jquery.js"></script>
-  <script src="/vendor/js/foundation.js"></script>
+  <script src="/vendor/js/1_modernizr.js"></script>
+  <script src="/vendor/js/2_angular.js"></script>
+  <script src="/vendor/js/3_angular-route.js"></script>
+  <script src="/vendor/js/4_jquery.js"></script>
+  <script src="/vendor/js/5_foundation.js"></script>
   <script src="/js/<!-- @echo pkgname -->.js"></script>
-
   <link rel="stylesheet" href="/vendor/css/foundation-icons.css"/>
   <link rel="stylesheet" href="/vendor/css/normalize.css"/>
   <link rel="stylesheet" href="/vendor/css/foundation.min.css"/>
@@ -29,24 +30,12 @@
   <!-- @endif -->
 
   <!-- @if NODE_ENV == 'PRODUCTION' -->
-
-  <!-- CSS cdn's -->
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.1/normalize.min.css"/>
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/foundation/5.1.1/css/foundation.min.css"/>
-  <!-- CSS  production <!-- @echo pkgname --> -->
-  <link rel="stylesheet" href="/css/<!-- @echo pkgname -->.min.css"/>
-
-  <!-- JS cdn's -->
-  <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular-route.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.1.1/js/foundation.min.js"></script>
-  <!-- JS production <!-- @echo pkgname --> -->
+  <!-- JS & CSS production <!-- @echo pkgname --> -->
+  <script src="/vendor/<!-- @echo pkgname -->.min.js"></script>
   <script src="/js/<!-- @echo pkgname -->.min.js"></script>
-
+  <link rel="stylesheet" href="/vendor/css/<!-- @echo pkgname -->.min.css"/>
+  <link rel="stylesheet" href="/css/<!-- @echo pkgname -->.min.css"/>
   <!-- @endif -->
-
 
 </head>
 <body ng-controller="mainCtrl">
@@ -66,13 +55,15 @@
           <!-- Right Nav Section -->
           <ul class="right">
             <li class="divider"></li>
-            <li class="active"><a href="#home?scrollTo=over-ons">Over ons</a></li>
+            <li class="active"><a href="#!home?scrollTo=over-ons">Over ons</a></li>
+            <li class="divider"></li>
+            <li class="active"><a href="#map">Coastline</a></li>
             <li class="divider"></li>
             <li class="active"><a href="#home?scrollTo=contact">Contact</a></li>
             <li class="divider"></li>
             <li class="active"><a href="#video">Video's</a></li>
             <li class="divider"></li>
-            <li class="active"><a href="#details">Details</a></li>
+            <li class="active"><a href="#!details">Details</a></li>
             <li class="divider"></li>
           </ul>
         </section>
@@ -80,7 +71,7 @@
     </div>
     <div class="row">
       <div class="large-12 columns">
-        <div ng-view></div>
+        <div ng-view>blaat</div>
         {{scrollTo}}
       </div>
     </div>
@@ -111,9 +102,8 @@
     <div class="medium-4 large-4 columns">
       <h3>Overig</h3>
       <ul class="footer-links">
-         <li class="fi-link color-blue"> <a href="/#over-ons">Over ons</a></li>
+         <li class="fi-link color-blue"> <a href="/#home?scrollTo=over-ons">Over ons</a></li>
          <li class="fi-link color-blue"> <a href="/#disclaimer" rel="no-follow">Disclaimer</a></li>
-         <li class="fi-link color-blue"> <a href="/#privacy" rel="no-follow">Privacy</a></li>
          <li class="fi-link color-blue"> <a href="/#algemene-voorwaarden" rel="no-follow">Algemene voorwaarden</a></li>
        </ul>
      </div>
