update for production

--- a/src/partials/home.jade
+++ b/src/partials/home.jade
@@ -2,12 +2,12 @@ div.row
  div.large-12.columns
   img.full(src="/static/img/robertskitesafari.jpg", title="graag nemen we je mee onvergetelijke kite ervaring", border="0")
   p.
-   Robert's Kitesafari gaat van start in Perth, West-Australië, "Down Under".
+   Roberts Kitesafari gaat van start in Perth, West-Australië, 'Down Under'.
    Na een dag ontspanning in de prachtige stad Perth waar we op een camping overnachten
    vertrekken wij "up North".
   p.
    Wij rijden met onze goed uitgeruste Toyota landcruisers langs de westkust met meer dan 50 kite spots
-   over de 5000 km lange kustlijn, waarvan Robert's kitesafari 20 van deze mooie spots aandoet.
+   over de 5000 km lange kustlijn, waarvan Roberts kitesafari 20 van deze mooie spots aandoet.
 div.row
  div.large-6.columns
   img.full(src="/static/img/kiter-waves-01.jpg", title="", border="0")
@@ -18,9 +18,9 @@ div.row
     Met ons team en locale kennis nemen wij je twee weken mee naar de top 20 locaties met 
     "over head" golven achter het rif. De perfecte kustlijn om een downwinder te doen en 4WD tracks te rijden.
   p.
-    Er is voor iedereen wat wils: kleine golven, vlak water, hoge golven en "reef breaks".
+    Er is voor iedereen wat wils: kleine golven, vlak water, hoge golven en 'reef breaks'.
   p.
-    De zeewind die altijd uit het Zuid-Westen waait is een sterk thermische zeewind genaamd 
+    De wind die altijd uit het Zuid-Westen waait is een sterk thermische zeewind genaamd 
     "Fremantle doctor" die 6 maanden lang elke dag om klokslag 12:00h begint te waaien. 
     Deze wind biedt de perfecte omstandigheden om te “wave rijden” en is tussen de 15 en 40 knopen. 
     Wij adviseren om minimaal drie vliegers mee te nemen: 6, 7, 8 en 9 meter zijn de meest gevaren 
@@ -47,9 +47,9 @@ div.row
  div.large-12.columns
    p.
      Bij aankomst bieden wij een lekkere lunch aan, daarna kan er gevaren worden. Ondertussen slaan
-     wij het kamp op. Dit kan zijn op een camping, in de“bush”of op het strand.
+     wij het kamp op. Dit kan zijn op een camping, in de 'bush' of op het strand.
      S'avonds kun je genieten van een heerlijke BBQ of andere mooie gerechten die op dat moment
-     door onze privé kok worden bedacht, óf een“catch of the day" natuurlijk want het kan zomaar
+     door onze privé kok worden bedacht, óf een 'catch of the day' natuurlijk want het kan zomaar
      gebeuren dat wij een lekker visje vangen, daar staat Australië tenslotte bekend om.
     p.
      Met een drankje in de hand kun je lekker nagenieten van de dag bij een knapperend kampvuur
@@ -63,7 +63,7 @@ div.row
      De Toyota's zijn voorzien van goede matrassen, bedlinnen, kussens, daktenten, of gewone tenten.
      Onze keukentrailer is voorzien van alle gemakken om een goede maaltijd voor te bereiden.
    p.
-     Het voordeel van West-Australië is dat ondanks dat je in de“outback" zit je toch af en toe ook de
+     Het voordeel van West-Australië is dat ondanks dat je in de 'outback' zit je toch af en toe ook de
      bewoonde wereld passeert waardoor je (mócht het nodig zijn) binnen 1,5 uur bij een ziekenhuis of
      dokter kunt zijn.
    p.
@@ -71,7 +71,7 @@ div.row
  div.large-6.columns
   img.full(src="/static/img/safari-05.jpg", title="", border="0")
  div.large-6.columns
-  img.full(src="/static/img/safari-06.jpg", title="", border="0")
+  img.full(src="/static/img/safari-08.jpg", title="", border="0")
 div.row
  div.large-12.columns
   h2#over-ons Over ons
@@ -109,7 +109,7 @@ div.row
    en landen, ziet zoveel verschillende stranden met een enorm scala aan mogelijkheden en de
    volgende dag is altijd een verrassing.
    
-    Met enkele jaren kite ervaring en liefde voor water, voel mij thuis dáár waar er zee en wind is.
+    Met enkele jaren kite ervaring en liefde voor water, voel ik mij thuis dáár waar er zee en wind is.
    
     Door het vele reizen over de hele wereld, mijn ervaring in de entertainment industrie, jarenlange
    horeca ervaring bij Far Out, het verhuren van zomer appartementen en mijn vrolijke
