--- a/src/partials/map.jade
+++ b/src/partials/map.jade
@@ -1,7 +1,10 @@
 div.row
  div.large-12.columns
   h3 Australian coastline
-  p Kan je vast in- uitzomen op de plekken waar we komen
+  p Je in- uitzomen op de kitespots waar we komen.
 div.row
  div.large-12.columns#map-canvas
-  div.google-map(hello-maps="", latitude="-30.72380", longitude="115.21477")
+  div.google-map(kite-map="", latitude="-30.72380", longitude="115.21477")
+div.row
+ div.large-12.columns
+  img.full(src="/static/img/kangarous.jpg", title="", border="0")
