--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -5,6 +5,11 @@ $topbar-sticky-class: ".sticky" default;
 html, body, .off-canvas-wrap, .inner-wrap, .main-section
 {
   background-color: #eee;
+  background: url(/static/img/bg.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 .wrapper{min-height:100%}
@@ -29,12 +34,13 @@ html, body, .off-canvas-wrap, .inner-wrap, .main-section
 }
 
 .row {
-    background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.5);
+  a {color: #913206;text-decoration: underline;}
 }
+
 
 img.full {
   width: 100%;
-  height: 100%;
   margin-bottom: 1em;
 }
 
@@ -65,6 +71,9 @@ img.full {
 }
 
 .google-map {width:100%; height:100%;}
+.map-labels {
+     white-space: nowrap;
+}
 #map-canvas { height:30rem; img{max-width: inherit; }}
 
 .iGroupware-footer {
