--- a/src/layout/index.html
+++ b/src/layout/index.html
@@ -3,24 +3,40 @@
 <head>
   <meta charset="utf-8">
   <title>Roberts kitesafari</title>
-  <meta name="description" content="Robert's Kitesafari gaat van start in Perth, West-Australië, "Down Under". Na een dag ontspanning in de prachtige stad Perth waar we op een camping overnachten vertrekken wij "up North".">
+  <meta name="description" content="Robert's Kitesafari gaat van start in Perth, West-Australië, 'Down Under'. Na een dag ontspanning in de prachtige stad Perth waar we op een camping overnachten vertrekken wij 'up North'.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="fragment" content="!">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
-  <script src="http://maps.google.com/maps/api/js?sensor=false"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script src="http://maps.googleapis.com/maps/api/js?v=3.exp"></script>
 
   <!-- Place favicon.ico and apple-touch-icon(s) -->
-
+  <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png">
+  <link rel="icon" type="image/png" href="/favicon-192x192.png" sizes="192x192">
+  <link rel="icon" type="image/png" href="/favicon-160x160.png" sizes="160x160">
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
+  <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+  <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+  <meta name="msapplication-TileColor" content="#2B679F">
+  <meta name="msapplication-TileImage" content="/mstile-144x144.png">
 
   <!-- @if NODE_ENV == 'DEVELOPMENT' -->
 
   <!-- CSS  & JS development <!-- @echo pkgname --> -->
   <script src="/vendor/js/1_modernizr.js"></script>
-  <script src="/vendor/js/2_angular.js"></script>
   <script src="/vendor/js/3_angular-route.js"></script>
-  <script src="/vendor/js/4_jquery.js"></script>
   <script src="/vendor/js/5_foundation.js"></script>
+  <script src="/vendor/js/markerwithlabel.js"></script>
   <script src="/js/<!-- @echo pkgname -->.js"></script>
   <link rel="stylesheet" href="/vendor/css/foundation-icons.css"/>
   <link rel="stylesheet" href="/vendor/css/normalize.css"/>
@@ -36,9 +52,9 @@
   <link rel="stylesheet" href="/vendor/css/<!-- @echo pkgname -->.min.css"/>
   <link rel="stylesheet" href="/css/<!-- @echo pkgname -->.min.css"/>
   <!-- @endif -->
-
 </head>
 <body ng-controller="mainCtrl">
+
 <div class="wrapper"> 
   <div class="main">
     <div class="fixed">
@@ -55,7 +71,7 @@
           <!-- Right Nav Section -->
           <ul class="right">
             <li class="divider"></li>
-            <li class="active"><a href="#!home?scrollTo=over-ons">Over ons</a></li>
+            <li class="active"><a href="#home?scrollTo=over-ons">Over ons</a></li>
             <li class="divider"></li>
             <li class="active"><a href="#map">Coastline</a></li>
             <li class="divider"></li>
@@ -63,7 +79,7 @@
             <li class="divider"></li>
             <li class="active"><a href="#video">Video's</a></li>
             <li class="divider"></li>
-            <li class="active"><a href="#!details">Details</a></li>
+            <li class="active"><a href="#details">Details</a></li>
             <li class="divider"></li>
           </ul>
         </section>
@@ -71,7 +87,131 @@
     </div>
     <div class="row">
       <div class="large-12 columns">
-        <div ng-view>blaat</div>
+
+        <div ng-view>
+          <div class="row">
+            <div class="large-12 columns"><img src="/static/img/robertskitesafari.jpg" title="graag nemen we je mee onvergetelijke kite ervaring" border="0" class="full"/>
+              <p>
+                Roberts Kitesafari gaat van start in Perth, West-Australië, 'Down Under'.
+                Na een dag ontspanning in de prachtige stad Perth waar we op een camping overnachten
+                vertrekken wij "up North".
+              </p>
+              <p>
+                Wij rijden met onze goed uitgeruste Toyota landcruisers langs de westkust met meer dan 50 kite spots
+                over de 5000 km lange kustlijn, waarvan Roberts kitesafari 20 van deze mooie spots aandoet.
+              </p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="large-12 columns">
+              <p>
+                Met ons team en locale kennis nemen wij je twee weken mee naar de top 20 locaties met 
+                "over head" golven achter het rif. De perfecte kustlijn om een downwinder te doen en 4WD tracks te rijden.
+              </p>
+              <p>Er is voor iedereen wat wils: kleine golven, vlak water, hoge golven en 'reef breaks'.</p>
+              <p>
+                De wind die altijd uit het Zuid-Westen waait is een sterk thermische zeewind genaamd 
+                "Fremantle doctor" die 6 maanden lang elke dag om klokslag 12:00h begint te waaien. 
+                Deze wind biedt de perfecte omstandigheden om te “wave rijden” en is tussen de 15 en 40 knopen. 
+                Wij adviseren om minimaal drie vliegers mee te nemen: 6, 7, 8 en 9 meter zijn de meest gevaren 
+                maten voor mannen rond de 80 kg.
+              </p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="large-12 columns">
+              <p>
+                In deze ongelooflijke mooie omgeving waar de natuur nog ongerept is, is het zeewater kraakhelder
+                met een temperatuur van minimaal 22 graden. Het is de ideale plek om te kamperen op het strand, in de“bush" of op een camping.
+              </p>
+              <p>
+                Met onze goed uitgeruste 4WD Toyota Landcruisers waarvan 2 jeeps met trailer rijden: één
+                keukentrailer de ander voor kiteboards, SUP- en surfuitrusting én een jeep met een kleine boot om
+                eventueel gestrande kiters en SUP-ers op te halen. Het doel is om in de ochtend te gaan rijden na 
+                het ontbijt en een SUP/surfsessie om naar de volgende kite stek te rijden.
+              </p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="large-12 columns">
+              <p>
+                Bij aankomst bieden wij een lekkere lunch aan, daarna kan er gevaren worden. Ondertussen slaan
+                wij het kamp op. Dit kan zijn op een camping, in de 'bush' of op het strand.
+                S'avonds kun je genieten van een heerlijke BBQ of andere mooie gerechten die op dat moment
+                door onze privé kok worden bedacht, óf een 'catch of the day' natuurlijk want het kan zomaar
+                gebeuren dat wij een lekker visje vangen, daar staat Australië tenslotte bekend om.
+              </p>
+              <p>
+                Met een drankje in de hand kun je lekker nagenieten van de dag bij een knapperend kampvuur
+                hier en daar opgeluisterd door gitaarmuziek.
+              </p>
+            </div>
+            <div class="large-12 columns">
+              <p>
+                De Toyota's zijn voorzien van goede matrassen, bedlinnen, kussens, daktenten, of gewone tenten.
+                Onze keukentrailer is voorzien van alle gemakken om een goede maaltijd voor te bereiden.
+              </p>
+              <p>
+                Het voordeel van West-Australië is dat ondanks dat je in de 'outback' zit je toch af en toe ook de
+                bewoonde wereld passeert waardoor je (mócht het nodig zijn) binnen 1,5 uur bij een ziekenhuis of
+                dokter kunt zijn.
+              </p>
+              <p>West-Australië is ook ideaal om te duiken, snorkelen, vissen, wandelen en nog veel meer.</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="large-12 columns">
+              <h2 id="over-ons">Over ons</h2>
+            </div>
+          </div>
+          <div class="row">
+            <div class="large-6 columns">
+              <h3>Robert Kamerbeek</h3>
+              <p>
+                Ik ben geboren in Amsterdam en woon nu in Zandvoort. Zo'n 17 jaar geleden ben ik begonnen met
+                kitesurfen. Daarnaast heb ik ook allerlei andere watersporten gedaan zoals, windsurfen, zeilen,
+                wave-skieën, golfsurfen etc.
+              </p>
+              <p>
+                Mijn sport was altijd doel tot de bestemming van mijn reis en zó hebben wij over de hele wereld
+                gezworven van Zuid-Afrika tot Brazilië, Costa Rica, Mexico, Amerika, Hawaï, Bali en Spanje maar de
+                meeste trips zijn wel naar Australië geweest, daar kom ik al zo'n 18 jaar en ondertussen weet ik alle
+                top spots te vinden in het Westen.
+              </p>
+            </div>
+            <div class="large-12 columns">
+              <p>
+                Naast de fantastische omstandigheden voor het kitesurfen en andere watersporten alsook het
+                weer en veiligheid zijn Australiërs ontzettend gastvrij en oprecht. Dat is ook wel iets dat ons erg
+                aanspreekt.
+                Na jarenlange ervaring in de horeca (Ik was 20 jaar eigenaar van strandpaviljoen“Far Out”te
+                Zandvoort) ben ik ervan overtuigd dat mensen entertainen en verzorgen mij op het lijf geschreven
+                is.
+                Met deze safari wil ik dát combineren met jullie naar de mooiste kite spots van West-Australië mee
+                te nemen.
+              </p>
+            </div>
+            <div class="large-12 columns">
+              <h3>Miriam Veldman</h3>
+              <p>
+                Ik ben geboren in Zuid-Afrika, met mijn 15de emigreerde ik naar Nederland. Ik ben zangeres en
+                mijn gitaar reist mee naar alle bestemmingen.
+                De mooiste reizen die ik heb gemaakt zijn wel díe naar Australië geweest, vooral de trips naar het
+                Noorden en Zuiden. Ik houd ervan om onderweg zijn, je ontmoet veel mensen uit allerlei culturen
+                en landen, ziet zoveel verschillende stranden met een enorm scala aan mogelijkheden en de
+                volgende dag is altijd een verrassing.
+                
+                 Met enkele jaren kite ervaring en liefde voor water, voel ik mij thuis dáár waar er zee en wind is.
+                 
+                 Door het vele reizen over de hele wereld, mijn ervaring in de entertainment industrie, jarenlange
+                horeca ervaring bij Far Out, het verhuren van zomer appartementen en mijn vrolijke
+                persoonlijkheid ga ík er alles aan doen om de perfecte gastvrouw voor jullie te zijn tijdens dit
+                avontuur.
+                Daarnaast zal ik mij met name bezig houden met de boekingen, planning van de trips en organisatie.
+              </p>
+            </div>
+          </div>
+        </div><!-- end view -->
         {{scrollTo}}
       </div>
     </div>
@@ -93,9 +233,8 @@
       </ul>
     </div>
     <div class="medium-4 large-4 columns">
-    <h3>Social media</h3>
+    <h3>Facebook</h3>
       <p><strong>Roberts Kitesafari</p>
-      <a href="https://twitter.com/"><i class="fi-social-twitter footer-social" title="Roberts safari op Twitter"></i></a>
       <a href="https://www.facebook.com/robertenmiriam.kamerbeek"><i class="fi-social-facebook footer-social" title="Robert en Miriam op Facebook"></i></a>
       </p><p>
     </p></div>
@@ -103,8 +242,8 @@
       <h3>Overig</h3>
       <ul class="footer-links">
          <li class="fi-link color-blue"> <a href="/#home?scrollTo=over-ons">Over ons</a></li>
+         <li class="fi-link color-blue"> <a href="http://www.seabreeze.com.au/graphs/wa3.asp">Seabreeze (weer & wind)</a></li>
          <li class="fi-link color-blue"> <a href="/#disclaimer" rel="no-follow">Disclaimer</a></li>
-         <li class="fi-link color-blue"> <a href="/#algemene-voorwaarden" rel="no-follow">Algemene voorwaarden</a></li>
        </ul>
      </div>
   </div>
@@ -118,7 +257,7 @@
 
 
 <script>
-    $(document).foundation();
+ $(document).foundation();
 </script>
 
 </body>
