--- a/src/partials/details.jade
+++ b/src/partials/details.jade
@@ -15,6 +15,9 @@ div.row
   img.full(src="/static/img/safari-06.jpg", title="", border="0")
 div.row
  div.large-6.columns
+  h3 Tour informatie
+  p Datum van vertrek begin november 2015 t/m eind februari 2016.<br>(meer informatie volgt met video's en kite lokaties)
+  p #[a(href='http://www.seabreeze.com.au/graphs/wa3.asp') Seabreeze] is een zeer interessante site met veel informatie over het weer en de lokatie.
   h3 Reis informatie
   p Beste verbinding: 
   blockquote 
@@ -23,12 +26,15 @@ div.row
     6 vlieguren naar Dubai met A380<br>
     10 uur naar Perth met 777
   p Vliegtickets variëren in prijs van € 900,00 tot € 1400,00
-  h3 Verzekering
-  p.
-   Het is belangrijk een goede reisverzekering af te sluiten dat kite- kite geralteerde activiteiten dekt.
-   Bijv. Allianz Global Assistance.
  div.large-6.columns
   img.full(src="/static/img/safari-05.jpg", title="", border="0")
+div.row
+ div.large-12.columns
+  h3 Verzekering
+  p.
+   Het is belangrijk een goede reisverzekering af te sluiten dat de kite en de kite geralteerde activiteiten dekt.
+   Dan kan bijvoorbeeld bij Allianz Global Assistance of via de
+   #[a(href='http://www.funsportpolis.nl/index.php/faq') Nederlandse kitevereningingn (NKV)]
 div.row
  div.large-12.columns
   h3 Annulering
