--- a/src/layout/index.html
+++ b/src/layout/index.html
@@ -62,7 +62,7 @@
       <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area">
           <li class="name">
-            <h1><a href="#">Roberts Kitesafari</a></h1>
+            <h1><a href="#" class="fi-home"> Roberts Kitesafari</a></h1>
           </li>
            <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
           <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
@@ -223,7 +223,7 @@
       <h3 id="contact">Contact</h3>
       <strong>Robert Kamerbeek</strong>
       <ul class="footer-links">
-        <li class="fi-mail color-blue"> <a href="mailto:doecha@hotmail.com">doecha@hotmail.com</a></li>
+        <li class="fi-mail color-blue"> <a href="mailto:info@robertskitesafari.com">info@robertskitesafari.com</a></li>
         <li class="fi-megaphone color-blue"> <a href="tel:+310652090601">+31 (0) 652 090 601</a></li>
       </ul>
       <strong>Miriam Veldman</strong>
