--- a/src/partials/details.jade
+++ b/src/partials/details.jade
@@ -6,17 +6,19 @@ div.row
   p Inbegrepen in de Prijs:
   ul
    li 4WD, daktenten, gewone tenten, keukentrailer,
-   li trailer voor boards, kites, SUP boards, bootje, vishengels etc.
+   li Trailer voor boards, kites, SUP boards, bootje, vishengels e.d.
    li Ontbijt, lunch, avondeten en snacks
    li Koffie, thee, water, limonade en 2 X Nederlands gedestilleerde dranken
-   li Overnachtingen op Campings en fee natuurparken
+   li Overnachtingen op campings en toeslag entrée voor natuurparken
    li Transfer vliegveld Perth
  div.large-6.columns
   img.full(src="/static/img/safari-06.jpg", title="", border="0")
 div.row
  div.large-6.columns
   h3 Tour informatie
-  p Datum van vertrek begin november 2015 t/m eind februari 2016.<br>(meer informatie volgt met video's en kite lokaties)
+  p.
+   Datum van vertrek begin november 2015 t/m eind februari 2016.
+   Inschrijvingen per tour minimaal 8 en maximaal 10 personen (meer informatie volgt met video's en kite lokaties).
   p #[a(href='http://www.seabreeze.com.au/graphs/wa3.asp') Seabreeze] is een zeer interessante site met veel informatie over het weer en de lokatie.
   h3 Reis informatie
   p Beste verbinding: 
@@ -45,8 +47,8 @@ div.row
   p.
    Als zich serieuze weer waarschuwingen voordoen voor de noordelijke kustlijn/Pilbarra zullen wij de
    route wijzigen om deze te vermijden.
-   Zware depressies in het noorden en westen van Australië kunnen resulteren in fantastisch golfsurf
-   condities aan de "central coast". De tour kan ook omgezet worden naar het Zuid-Westen.
+   Zware depressies in het noorden en westen van Australië kunnen resulteren in fantastisch golf surf
+   condities aan de <em>central coast</em>. De tour kan ook omgezet worden naar het Zuid-Westen.
 div.row
  div.large-12.columns
   h3 Kleding e.d.
@@ -59,8 +61,9 @@ div.row
    li T-shirts en een sweater voor in de avond uurtjes..het kan kan soms afkoelen
    li Slippers en een paar goede schoenen
    li Petje
+   li Lycra
    li Shorti voor in de middag (Als je te lang vaart schuurt je buik open door zout en zand)
    li Goede zonnebril (Ik zou een waterzonnebril aanraden want de zon in Australië kan verblindend zijn)
    li Goede sunblock bijv. Island tribe 40+
    li 2 á 3 kites en een surfboard. Voor díegene die willen afwisselen zijn er genoeg twin-tips aanwezig alsook reserve kites, SUP- en surfboards.
-   li Snorkel- en hengeluitrusting
+   li Snorkeluitrusting
