--- a/src/partials/home.jade
+++ b/src/partials/home.jade
@@ -2,12 +2,11 @@ div.row
  div.large-12.columns
   img.full(src="/static/img/robertskitesafari.jpg", title="graag nemen we je mee onvergetelijke kite ervaring", border="0")
   p.
-   Roberts Kitesafari gaat van start in Perth, West-Australië, 'Down Under'.
-   Na een dag ontspanning in de prachtige stad Perth waar we op een camping overnachten
-   vertrekken wij "up North".
+   Robert's kitesafari gaat start in Perth, West-Australië, <em>Down Under</em>. Na een dag ontspanning in de prachtige
+   stad Perth (waar we op een camping overnachten) vertrekken wij <em>up North</em>.
   p.
-   Wij rijden met onze goed uitgeruste Toyota landcruisers langs de westkust met meer dan 50 kite spots
-   over de 5000 km lange kustlijn, waarvan Roberts kitesafari 20 van deze mooie spots aandoet.
+   Wij rijden met onze goed uitgeruste Toyota landcruisers langs de westkust met meer dan 50 kite spots over de
+   5000 km lange kustlijn, waarvan Roberts kitesafari 20 van deze mooie spots aandoet.
 div.row
  div.large-6.columns
   img.full(src="/static/img/kiter-waves-01.jpg", title="", border="0")
@@ -15,30 +14,28 @@ div.row
   img.full(src="/static/img/kiter-waves-02.jpg", title="", border="0")
  div.large-12.columns
   p.
-    Met ons team en locale kennis nemen wij je twee weken mee naar de top 20 locaties met 
-    "over head" golven achter het rif. De perfecte kustlijn om een downwinder te doen en 4WD tracks te rijden.
+   Met ons team en locale kennis nemen wij je twee weken mee naar locaties met voor ieder wat wils: <em>over head</em>
+   golven achter het rif, kleine golven, vlak water, hoge golven en <em>reef breaks</em>.
+   De perfecte kustlijn om een downwinder te doen en 4WD tracks te rijden.
   p.
-    Er is voor iedereen wat wils: kleine golven, vlak water, hoge golven en 'reef breaks'.
-  p.
-    De wind die altijd uit het Zuid-Westen waait is een sterk thermische zeewind genaamd 
-    "Fremantle doctor" die 6 maanden lang elke dag om klokslag 12:00h begint te waaien. 
-    Deze wind biedt de perfecte omstandigheden om te “wave rijden” en is tussen de 15 en 40 knopen. 
-    Wij adviseren om minimaal drie vliegers mee te nemen: 6, 7, 8 en 9 meter zijn de meest gevaren 
-    maten voor mannen rond de 80 kg.
+   De wind die uit het Zuid-Westen waait is een sterk thermische zeewind genaamd <em>The Fremantle doctor</em> die 6
+   maanden lang elke dag om klokslag 12:00h begint te waaien. Deze wind biedt de perfecte omstandigheden
+   om te <em>wave rijden</em> en is tussen de 15 en 40 knopen. Wij adviseren om minimaal drie vliegers mee te nemen:
+   6, 7, 8 en 9 meter zijn de meest gevaren maten voor mannen rond de 80kg.
 div.row
  div.large-6.columns
   img.full(src="/static/img/supper-waves-01.jpg", title="", border="0")
  div.large-6.columns
   img.full(src="/static/img/supper-waves-02.jpg", title="", border="0")
  div.large-12.columns
-   p.
-     In deze ongelooflijke mooie omgeving waar de natuur nog ongerept is, is het zeewater kraakhelder
-     met een temperatuur van minimaal 22 graden. Het is de ideale plek om te kamperen op het strand, in de“bush" of op een camping.
-   p.
-     Met onze goed uitgeruste 4WD Toyota Landcruisers waarvan 2 jeeps met trailer rijden: één
-     keukentrailer de ander voor kiteboards, SUP- en surfuitrusting én een jeep met een kleine boot om
-     eventueel gestrande kiters en SUP-ers op te halen. Het doel is om in de ochtend te gaan rijden na 
-     het ontbijt en een SUP/surfsessie om naar de volgende kite stek te rijden.
+  p.
+   In deze ongelooflijke mooie omgeving waar de natuur nog ongerept is, is het zeewater kraakhelder met een
+   temperatuur van minimaal 22 graden. Australië is het ideale land om te kamperen op het strand, in de <em>bush</em> of op een camping.
+  p.
+   Wij rijden met 3 jeeps waarvan 2 met een trailer (een keukentrailer de ander voor kiteboards, SUP- en
+   surfuitrusting) en één jeep met een kleine boot om eventueel gestrande kiters en SUP-ers op te halen.
+  p.
+   Het doel is om in de ochtend na een SUP of surf sessie en ontbijt te gaan rijden naar de volgende kite stek te rijden.
  div.large-6.columns
   img.full(src="/static/img/safari-01.jpg", title="", border="0")
  div.large-6.columns
@@ -46,28 +43,26 @@ div.row
 div.row
  div.large-12.columns
    p.
-     Bij aankomst bieden wij een lekkere lunch aan, daarna kan er gevaren worden. Ondertussen slaan
-     wij het kamp op. Dit kan zijn op een camping, in de 'bush' of op het strand.
-     S'avonds kun je genieten van een heerlijke BBQ of andere mooie gerechten die op dat moment
-     door onze privé kok worden bedacht, óf een 'catch of the day' natuurlijk want het kan zomaar
-     gebeuren dat wij een lekker visje vangen, daar staat Australië tenslotte bekend om.
-    p.
-     Met een drankje in de hand kun je lekker nagenieten van de dag bij een knapperend kampvuur
-     hier en daar opgeluisterd door gitaarmuziek.
+    Bij aankomst bieden wij een lekkere lunch aan, daarna kan er gevaren worden. Ondertussen slaan wij het
+    kamp op. Dit kan zijn op een camping, in de <em>bush</em> of op het strand. s' Avonds kun je genieten van een heerlijke
+    BBQ of andere mooie gerechten die op dat moment door onze privé kok worden bedacht, óf een <em>catch of the day</em>
+    natuurlijk want het kan zomaar gebeuren dat wij een lekker visje vangen, daar staat Australië tenslotte bekend om.
+   p.
+    Met een drankje in de hand kun je lekker nagenieten van de dag bij een knapperend kampvuur 
+    hier en daar opgeluisterd door gitaarmuziek.
  div.large-6.columns
   img.full(src="/static/img/safari-03.jpg", title="", border="0")
  div.large-6.columns
   img.full(src="/static/img/safari-04.jpg", title="", border="0")
  div.large-12.columns
-   p.
-     De Toyota's zijn voorzien van goede matrassen, bedlinnen, kussens, daktenten, of gewone tenten.
-     Onze keukentrailer is voorzien van alle gemakken om een goede maaltijd voor te bereiden.
-   p.
-     Het voordeel van West-Australië is dat ondanks dat je in de 'outback' zit je toch af en toe ook de
-     bewoonde wereld passeert waardoor je (mócht het nodig zijn) binnen 1,5 uur bij een ziekenhuis of
-     dokter kunt zijn.
-   p.
-     West-Australië is ook ideaal om te duiken, snorkelen, vissen, wandelen en nog veel meer.
+  p.
+   De Toyota's zijn voorzien van goede matrassen, bedlinnen, kussens en (dak)tenten.
+   Onze keukentrailer is dusdanig ingericht dat je er een lekkere maaltijd kunt voorbereiden.
+  p.
+   Het voordeel van West-Australië is dat ondanks dat je in de <em>Outback</em> zit je toch af en toe ook de bewoonde
+   wereld passeert waardoor je (mócht het nodig zijn) binnen 1,5 uur bij een ziekenhuis of dokter kunt zijn.
+  p.
+   West-Australië is ook ideaal om te duiken, snorkelen, vissen, wandelen en nog veel meer.
  div.large-6.columns
   img.full(src="/static/img/safari-05.jpg", title="", border="0")
  div.large-6.columns
@@ -78,27 +73,22 @@ div.row
 div.row
  div.large-6.columns
   h3 Robert Kamerbeek
-  p.
-   Ik ben geboren in Amsterdam en woon nu in Zandvoort. Zo'n 17 jaar geleden ben ik begonnen met
-   kitesurfen. Daarnaast heb ik ook allerlei andere watersporten gedaan zoals, windsurfen, zeilen,
-   wave-skieën, golfsurfen etc.
-  p.
-   Mijn sport was altijd doel tot de bestemming van mijn reis en zó hebben wij over de hele wereld
-   gezworven van Zuid-Afrika tot Brazilië, Costa Rica, Mexico, Amerika, Hawaï, Bali en Spanje maar de
-   meeste trips zijn wel naar Australië geweest, daar kom ik al zo'n 18 jaar en ondertussen weet ik alle
-   top spots te vinden in het Westen.
+   p.
+    Ik ben geboren in Amsterdam en woon nu in Zandvoort. Zo'n 17 jaar geleden ben ik begonnen met
+    kitesurfen. Daarnaast heb ik ook allerlei andere watersporten gedaan zoals, windsurfen, zeilen, wave-skiën en golf surfen.
+   p.
+    Mijn sport was altijd doel tot de bestemming van mijn reis en zó hebben wij over de hele wereld
+    gezworven van Zuid-Afrika tot Brazilië, Costa Rica, Mexico, Amerika, Hawaï, Bali en Spanje maar de
+    meeste trips zijn wel naar Australië geweest, daar kom ik al zo'n 18 jaar en ondertussen weet ik alle
+    top spots te vinden in het Westen.
+   p.
+    Naast de fantastische omstandigheden voor het kitesurfen en andere watersporten alsook het weer
+    en veiligheid zijn Australiërs ontzettend gastvrij en oprecht. Dat is ook wel iets dat ons erg
+    aanspreekt. Na jarenlange ervaring in de horeca (Ik was 20 jaar eigenaar van strandpaviljoen <em>FarOut</em> te Zandvoort) 
+    ben ik ervan overtuigd dat mensen entertainen en verzorgen mij op het lijf
+    geschreven is. Met deze safari wil ik dát combineren met jullie naar de mooiste kite spots van West-Australië te nemen.
  div.large-6.columns
   img.full(src="/static/img/robert-mariam.jpg", title="", border="0")
- div.large-12.columns
-  p.
-   Naast de fantastische omstandigheden voor het kitesurfen en andere watersporten alsook het
-   weer en veiligheid zijn Australiërs ontzettend gastvrij en oprecht. Dat is ook wel iets dat ons erg
-   aanspreekt.
-   Na jarenlange ervaring in de horeca (Ik was 20 jaar eigenaar van strandpaviljoen“Far Out”te
-   Zandvoort) ben ik ervan overtuigd dat mensen entertainen en verzorgen mij op het lijf geschreven
-   is.
-   Met deze safari wil ik dát combineren met jullie naar de mooiste kite spots van West-Australië mee
-   te nemen.
  div.large-12.columns
   h3 Miriam Veldman
   p.
