kleine tekst aanpassing

--- a/src/partials/home.jade
+++ b/src/partials/home.jade
@@ -35,7 +35,7 @@ div.row
    Wij rijden met 3 jeeps waarvan 2 met een trailer (een keukentrailer de ander voor kiteboards, SUP- en
    surfuitrusting) en één jeep met een kleine boot om eventueel gestrande kiters en SUP-ers op te halen.
   p.
-   Het doel is om in de ochtend na een SUP of surf sessie en ontbijt te gaan rijden naar de volgende kite stek te rijden.
+   Het doel is om in de ochtend na een SUP of surf sessie en ontbijt, te gaan rijden naar de volgende kite stek.
  div.large-6.columns
   img.full(src="/static/img/safari-01.jpg", title="", border="0")
  div.large-6.columns
