--- a/src/partials/home.jade
+++ b/src/partials/home.jade
@@ -2,7 +2,7 @@ div.row
  div.large-12.columns
   img.full(src="/static/img/robertskitesafari.jpg", title="graag nemen we je mee onvergetelijke kite ervaring", border="0")
   p.
-   Robert's kitesafari gaat start in Perth, West-Australië, <em>Down Under</em>. Na een dag ontspanning in de prachtige
+   Robert's kitesafari gaat van start in Perth, West-Australië, <em>Down Under</em>. Na een dag ontspanning in de prachtige
    stad Perth (waar we op een camping overnachten) vertrekken wij <em>up North</em>.
   p.
    Wij rijden met onze goed uitgeruste Toyota landcruisers langs de westkust met meer dan 50 kite spots over de
