details naar info

--- a/src/layout/index.html
+++ b/src/layout/index.html
@@ -79,7 +79,7 @@
             <li class="divider"></li>
             <li class="active"><a href="#video">Video's</a></li>
             <li class="divider"></li>
-            <li class="active"><a href="#details">Details</a></li>
+            <li class="active"><a href="#info">Meer info</a></li>
             <li class="divider"></li>
           </ul>
         </section>
