Some missing translations

--- a/src/layout/index.html
+++ b/src/layout/index.html
@@ -255,9 +255,9 @@
   <!-- @if NODE_ENV == 'DEVELOPMENT' -->
 
   <!-- JS development <!-- @echo pkgname --> -->
-  <script src="/vendor/js/1_modernizr.js"></script>
-  <script src="/vendor/js/3_angular-route.js"></script>
-  <script src="/vendor/js/5_foundation.js"></script>
+  <script src="/vendor/js/modernizr.js"></script>
+  <script src="/vendor/js/angular-route.min.js"></script>
+  <script src="/vendor/js/foundation.min.js"></script>
   <script src="/vendor/js/angular-gettext.min.js"></script>
   <script src="/vendor/js/markerwithlabel.js"></script>
   <script src="/js/<!-- @echo pkgname -->.js"></script>
