2de concept verstallingen

--- a/src/partials/home.jade
+++ b/src/partials/home.jade
@@ -1,6 +1,6 @@
 div.row
  div.large-12.columns
-  img.full(src="/static/img/robertskitesafari.jpg", title="graag nemen we je mee onvergetelijke kite ervaring", border="0")
+  img.full(ng-src="/static/img/robertskitesafari-{{lang}}.jpg", title="graag nemen we je mee onvergetelijke kite ervaring", border="0")
   p(translate).
    Robert's kitesafari gaat van start in Perth, West-Australië, <em>Down Under</em>. Na een dag ontspanning in de prachtige stad Perth (waar we op een camping overnachten) vertrekken wij <em>up North</em>.
   p(translate).
