--- a/src/partials/info.jade
+++ b/src/partials/info.jade
@@ -50,9 +50,17 @@ div.row
  div.large-6.columns
   h3(translate) Verzekering
   p(translate)
-   | Het is belangrijk een goede reisverzekering af te sluiten dat de kite en de kite geralteerde activiteiten dekt.
+   | Het is belangrijk een goede reisverzekering af te sluiten dat de kite en de kite geralteerde activiteiten dekt. 
    | Dan kan bijvoorbeeld bij #[a(href='https://www.allianz-assistance.nl/reisverzekering/adventure-en-survival-verzekering') Allianz Global Assistance] 
    | of via de #[a(href='http://www.funsportpolis.nl/index.php/faq') Nederlandse kitevereningingn (NKV)]
+  h3 Kite level
+  p(translate)
+   | Omdat je mee gaat doen met kitevakantie verwachten we dat je genoeg ervaring hebt. 
+   | Daarom vinden we het belangrijk dat je de volgende informatie goed gelezen hebt:
+  ul
+   li #[a(href='/static/docs/Kite-level-agreement.pdf') Kite-level agreement (pdf)<F2>] 
+   li #[a(href='/static/docs/Form-and-participation-agreement.pdf') Participation agreement (pdf)]
+  p(translate) Deze formulieren moet je getekend opsturen of meenemen.
  div.large-6.columns
   h3(translate) Annulering
   p(translate)
