2de concept verstallingen + target blank

--- a/src/layout/index.html
+++ b/src/layout/index.html
@@ -238,8 +238,8 @@
       <ul class="footer-links">
          <li class="fi-link color-blue"> <a href="/#home?scrollTo=about-us">About us</a></li>
          <!-- <li class="fi-link color-blue"> <a href="http://www.seabreeze.com.au/graphs/wa3.asp">Seabreeze (weer & wind)</a></li> -->
-         <li class="fi-link color-blue"> <a href="/static/docs/General-terms-and-conditions.pdf" rel="no-follow">Terms and conditions (pdf)</a></li>
-         <li class="fi-link color-blue"> <a href="/static/docs/Form-and-participation-agreement.pdf" rel="no-follow">Participation agreement (pdf)</a></li>
+         <li class="fi-link color-blue"> <a href="/static/docs/General-terms-and-conditions.pdf"  target="_blank" rel="no-follow">Terms and conditions (pdf)</a></li>
+         <li class="fi-link color-blue"> <a href="/static/docs/Form-and-participation-agreement.pdf"  target="_blank" rel="no-follow">Participation agreement (pdf)</a></li>
        </ul>
      </div>
   </div>
