--- a/src/partials/info.jade
+++ b/src/partials/info.jade
@@ -58,8 +58,8 @@ div.row
    | Omdat je mee gaat doen met kitevakantie verwachten we dat je genoeg ervaring hebt. 
    | Daarom vinden we het belangrijk dat je de volgende informatie goed gelezen hebt:
   ul
-   li #[a(href='/static/docs/Kite-level-agreement.pdf') Kite-level agreement (pdf)<F2>] 
-   li #[a(href='/static/docs/Form-and-participation-agreement.pdf') Participation agreement (pdf)]
+   li #[a(href='/static/docs/Kite-level-agreement.pdf', target="_blank") Kite-level agreement (pdf)<F2>] 
+   li #[a(href='/static/docs/Form-and-participation-agreement.pdf', target="_blank") Participation agreement (pdf)]
   p(translate) Deze formulieren moet je getekend opsturen of meenemen.
  div.large-6.columns
   h3(translate) Annulering
