--- a/src/partials/home.jade
+++ b/src/partials/home.jade
@@ -87,6 +87,7 @@ div.row
     geschreven is. Met deze safari wil ik dát combineren met jullie naar de mooiste kite spots van West-Australië te nemen.
  div.large-6.columns
   img.full(src="/static/img/robert-mariam.jpg", title="", border="0")
+  a#booking.button.radius(href="#booking") Book us now!
  div.large-12.columns
   h3 Miriam Veldman
   p(translate)
