--- a/src/partials/info.jade
+++ b/src/partials/info.jade
@@ -98,3 +98,4 @@ div.row
   p(translate) Voor díegene die willen afwisselen zijn er genoeg twin-tips aanwezig alsook reserve kites, SUP- en surfboards, snorkel- en visuitrusting
  div.large-6.columns
   img.full(src="/static/img/safari-05.jpg", title="", border="0")
+  a#booking.button.radius(href="#booking") Book us now!
