bug scroll #top fixed

--- a/src/layout/index.html
+++ b/src/layout/index.html
@@ -74,7 +74,7 @@
             <li class="divider"></li>
             <li class="active"><a href="#home?scrollTo=about-us">About us</a></li>
             <li class="divider"></li>
-            <li class="active"><a href="#booking">Booking</a></li>
+            <li class="active"><a href="#booking#top">Booking</a></li>
             <li class="divider"></li>
             <li class="active"><a href="#map">Coastline</a></li>
             <li class="divider"></li>
