Added book buttons and captcha lang=en

--- a/src/partials/video.jade
+++ b/src/partials/video.jade
@@ -10,3 +10,6 @@ div.row
   p(translate) Enkele foto's en video's in een montage.
   div.flex-video
    iframe(src="https://player.vimeo.com/video/128354921", frameborder="0", allowfullscreen)
+div.row
+ div.large-12.columns.text-center
+  a#booking.button.radius(href="#booking#top") Book us now!
