Separate page about-us, booking button in footer, phone button in booking form

--- a/src/layout/index.html
+++ b/src/layout/index.html
@@ -72,7 +72,7 @@
              </ul>
             </li>
             <li class="divider"></li>
-            <li class="active"><a href="#home?scrollTo=about-us">About us</a></li>
+            <li class="active"><a href="#about-us">About us</a></li>
             <li class="divider"></li>
             <li class="active"><a href="#booking#top">Booking</a></li>
             <li class="divider"></li>
@@ -203,10 +203,10 @@
                 Noorden en Zuiden. Ik houd ervan om onderweg zijn, je ontmoet veel mensen uit allerlei culturen
                 en landen, ziet zoveel verschillende stranden met een enorm scala aan mogelijkheden en de
                 volgende dag is altijd een verrassing.
-                
-                 Met enkele jaren kite ervaring en liefde voor water, voel ik mij thuis dáár waar er zee en wind is.
-                 
-                 Door het vele reizen over de hele wereld, mijn ervaring in de entertainment industrie, jarenlange
+
+                Met enkele jaren kite ervaring en liefde voor water, voel ik mij thuis dáár waar er zee en wind is.
+
+                Door het vele reizen over de hele wereld, mijn ervaring in de entertainment industrie, jarenlange
                 horeca ervaring bij Far Out, het verhuren van zomer appartementen en mijn vrolijke
                 persoonlijkheid ga ík er alles aan doen om de perfecte gastvrouw voor jullie te zijn tijdens dit
                 avontuur.
@@ -236,6 +236,7 @@
         <li class="fi-mail color-blue"> <a href="mailto:info@robertskitesafari.com">info@robertskitesafari.com</a></li>
         <li class="fi-megaphone color-blue"> <a href="tel:+310652090601">+31 (0) 652 090 601</a></li>
       </ul>
+      <a id="booking-footer" class="button radius" href="#booking#top"> Book us now!</a>
     </div>
     <div class="medium-4 large-4 columns">
     <h3>Facebook</h3>
@@ -256,7 +257,7 @@
        </ul>
      </div>
   </div>
-  <div class="iGroupware-footer text-center">
+  <div class="filmer-footer text-center">
     <div class="row">
       <div class="large-12 columns">
         <a href="http://andries.filmer.nl">Development & Hosting by Andries Filmer</a> 
