--- a/src/partials/booking.jade
+++ b/src/partials/booking.jade
@@ -1,15 +1,18 @@
-form#top(ng-submit="submit()")
+form(ng-submit="submit()")
  div.row
   div.large-6.columns
    h3 Booking
    p To book your Robertskitesafari, or to contact us to request a quote or further information, 
-    | please complete the form. If your enquiry is urgent please contact us on +31 6 52090601.
-   P Please include arrival and departure details on the below form.
+    | please complete the form. Or if you prefer a regular e-mail 
+    a(href="mailto:info@robertskitesafari.com") info@robertskitesafari.com.
+    |  If your enquiry is urgent please contact us on 
+   a#booking.button.radius.small(href="tel:+31652090601") +31 652 090 601
+   P Please include arrival and departure details on the form.
    p
     strong Please note on confirmation of a booking we require a non refundable 50% deposit to secure you spot on your Roberts kitesafari.
    img.show-for-large-up.full(src="/static/img/kiter-waves-01.jpg", title="", border="0")
 
-  div.large-6.columns(ng-hide="submitSuccessfully")
+  div#top.large-6.columns(ng-hide="submitSuccessfully")
    h3 Your details
    div#error {{submitMessage}}
    label Fullname *
@@ -30,7 +33,7 @@ form#top(ng-submit="submit()")
    label Departure Date
    input(type="date" name="departure", ng-model="departure")
    div(vc-recaptcha="", key="recaptcha.key", on-success="setResponse(response)")
-   input.booking.button.radius(type="submit", value="Submit")
+   input#booking.booking.button.radius(type="submit", value="Submit")
   div.large-6.columns(ng-show="submitSuccessfully") 
    h3 Thank you very much
    strong Mail has been send, we will contact you soon.
