Minor English language typos from Thomas

--- a/src/partials/video.jade
+++ b/src/partials/video.jade
@@ -1,6 +1,6 @@
 div.row
  div.large-12.columns
-  h3(translate) Video's to get some taste
+  h3(translate) Video's to get a first taste
 div.row
  div.large-6.columns
   p(translate) Enkele video fragmenten van onze laatste trip. 
