--- a/src/layout/index.html
+++ b/src/layout/index.html
@@ -13,6 +13,9 @@
   <script src="http://maps.googleapis.com/maps/api/js?v=3.exp"></script>
   <script src="https://www.google.com/recaptcha/api.js?onload=vcRecaptchaApiLoaded&render=explicit&hl=en" async defer></script>
 
+  <link rel="alternate" hreflang="en" href="http://robertskitesafari.nl/index.en.html" />
+  <link rel="alternate" hreflang="de" href="http://robertskitesafari.nl/index.de.html" />
+
   <!-- Place favicon.ico and apple-touch-icon(s) -->
   <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
@@ -54,7 +57,7 @@
       <nav class="top-bar" data-topbar role="navigation">
         <ul class="title-area">
           <li class="name">
-            <h1><a href="#" class="fi-home"> <nobr>Roberts Kitesafari</nobr></a></h1>
+            <h1><a href="/" class="fi-home"> <nobr>Roberts Kitesafari</nobr></a></h1>
           </li>
            <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
           <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
@@ -72,17 +75,17 @@
              </ul>
             </li>
             <li class="divider"></li>
-            <li class="active"><a href="#about-us">About us</a></li>
+            <li class="active"><a href="/#about-us">About us</a></li>
             <li class="divider"></li>
-            <li class="active"><a href="#booking#top">Booking</a></li>
+            <li class="active"><a href="/#booking#top">Booking</a></li>
             <li class="divider"></li>
-            <li class="active"><a href="#map">Coastline</a></li>
+            <li class="active"><a href="/#map">Coastline</a></li>
             <li class="divider"></li>
-            <li class="active"><a href="#home?scrollTo=contact">Contact</a></li>
+            <li class="active"><a href="/#home?scrollTo=contact">Contact</a></li>
             <li class="divider"></li>
-            <li class="active"><a href="#video">Videos</a></li>
+            <li class="active"><a href="/#video">Videos</a></li>
             <li class="divider"></li>
-            <li class="active"><a href="#info">More info</a></li>
+            <li class="active"><a href="/#info">More info</a></li>
             <li class="divider"></li>
           </ul>
         </section>
@@ -241,7 +244,7 @@
     <div class="medium-4 large-4 columns">
     <h3>Facebook</h3>
       <p><strong>Roberts Kitesafari</p>
-      <a href="https://www.facebook.com/robertenmiriam.kamerbeek"><i class="fi-social-facebook footer-social" title="Robert en Miriam op Facebook"></i></a>
+      <a href="https://www.facebook.com/robertskitesafari"><i class="fi-social-facebook footer-social" title="Robert en Miriam op Facebook"></i></a>
       </p><p>
     </p></div>
     <div class="medium-4 large-4 columns">
