--- a/src/partials/info.jade
+++ b/src/partials/info.jade
@@ -50,7 +50,7 @@ div.row
  div.large-6.columns
   h3(translate) Verzekering
   p(translate)
-   | Het is belangrijk een goede reisverzekering af te sluiten dat de kite en de kite geralteerde activiteiten dekt. 
+   | Het is belangrijk een goede reisverzekering af te sluiten dat de kite en de kite gerelateerde activiteiten dekt. 
    | Dan kan bijvoorbeeld bij #[a(href='https://www.allianz-assistance.nl/reisverzekering/adventure-en-survival-verzekering') Allianz Global Assistance] 
    | of via de #[a(href='http://www.funsportpolis.nl/index.php/faq') Nederlandse kitevereningingn (NKV)]
   h3 Kite level
@@ -65,7 +65,7 @@ div.row
   h3(translate) Annulering
   p(translate)
    | In het geval dat de trip geannuleerd wordt door te weinig inschrijvingen word de aanbetaling volledig teruggestort.
-   | Als je de trip wilt annuleren 30 dagen voor vertrek is de aanbetaling niet uitkeerbaar. Wij hanteren
+   | Als je de trip wilt annuleren 30 dagen voor vertrek is de aanbetaling niet uitkeerbaar. Wij hanteren 
    | hiervoor dezelfde regels als in de #[a(href='http://www.anvr.nl/') ANVR]. 
    | Wat doen wij bij annulering door cyclonen e.d.?
   p(translate)
