--- a/src/partials/video.jade
+++ b/src/partials/video.jade
@@ -5,6 +5,10 @@ div.row
  div.large-6.columns
   p(translate) Enkele video fragmenten van onze laatste trip. 
   div.flex-video
+   iframe(src="https://player.vimeo.com/video/216984650", frameborder="0", webkitallowfullscreen, mozallowfullscreen, allowfullscreen)
+ div.large-6.columns
+  p(translate) Enkele video fragmenten van onze trip in 2015
+  div.flex-video
    iframe(src="https://player.vimeo.com/video/128351561", frameborder="0", webkitallowfullscreen, mozallowfullscreen, allowfullscreen)
  div.large-6.columns
   p(translate) Enkele foto's en video's in een montage.
