--- a/src/partials/info.jade
+++ b/src/partials/info.jade
@@ -1,8 +1,8 @@
 div.row
  div.large-6.columns
   h3(translate) Prijsindicatie en voorwaarden
-  p(translate) 2 weken kitesafari € 1950,00
-  p(translate) Aanbetaling 950,00 vóór eind augustus 2015. De restbetaling van € 1000,- dient uiterlijk eind november 2015 bijgeschreven te zijn.
+  p(translate) 2 weken kitesafari € 1750,00
+  p(translate) Aanbetaling 750,00 vóór eind augustus 2017. De restbetaling van € 1000,- dient uiterlijk eind november 2017 bijgeschreven te zijn.
   p(translate) Inbegrepen in de Prijs:
   ul
    li(translate) Toyota landcruisers, daktenten, gewone tenten, keukentrailer.
@@ -16,21 +16,17 @@ div.row
 div.row
  div.large-6.columns
   h3(translate) Tour informatie
-  p(translate) Datum van vertrek medio november 2015 t/m eind februari 2016.
+  p(translate) Datum van vertrek medio november 2017 t/m eind februari 2018.
 
   table
    tr
     td Safari
-    td 15-12-15
-    td 28-12-15
+    td 15-12-2017
+    td 28-12-2018
    tr
     td Safari
-    td 10-01-16
-    td 24-01-16
-   tr
-    td Safari
-    td 10-02-16
-    td 24-02-16
+    td 10-01-2018
+    td 24-01-2018
 
   i
    p(translate) (geplande data is variabel en kan afwijken)
@@ -44,7 +40,7 @@ div.row
    dd(translate) ca. 6 vlieguren naar Dubai met A380
    dd(translate) ca. 10 uur naar Perth met Airbus 380
   p(translate) Vliegtickets variëren in prijs van € 900,00 tot € 1400,00
-  p.strong(translate) Vergeet niet tijdig vergeten Visa te regelen.
+  p.strong(translate) Vergeet niet tijdig je Visa te regelen.
 
 div.row
  div.large-6.columns
@@ -69,7 +65,7 @@ div.row
  div.large-6.columns
   h3(translate) Overige informatie
   ul
-   li(translate) #[a(href='http://www.trivago.com/?iPathId=44315&bDispMoreFilter=true&aDateRange%5Barr%5D=2015-06-14&aDateRange%5Bdep%5D=2015-06-15&aCategoryRange=0%2C1%2C2%2C3%2C4%2C5&iRoomType=7&sOrderBy=relevance%20desc&aPartner=&aOverallLiking=1%2C2%2C3%2C4%2C5&iOffset=0&iLimit=25&iIncludeAll=0&bTopDealsOnly=false&iViewType=0&aPriceRange%5Bfrom%5D=0&aPriceRange%5Bto%5D=0&aGeoCode%5Blng%5D=115.857468&aGeoCode%5Blat%5D=-31.953005&of%5Blodging', target='_blanc') Trivago] is een goede site om hotels, appartementen te vinden. 
+   li(translate) #[a(href='http://www.trivago.com/?iPathId=44315', target='_blanc') Trivago] is een goede site om hotels, appartementen te vinden. 
    li(translate) #[a(href='http://www.seabreeze.com.au/graphs/wa3.asp') Seabreeze] is een zeer interessante site met veel informatie over het weer en de lokatie. 
   h3(translate) Kleding e.d.
   p(translate) Belangrijk is niet al te veel mee te nemen.
